# weather_landscape

./: .gitattributes  .gitignore  .wrangler.local.env.example  .wranglerignore  CLOUDFLARE-STORAGE-GUIDE.md  DEBUG_TRACING.md  DEPLOYMENT.md  DEPLOYMENT_SIZE_FIX.md  MIGRATE_R2_BUCKET.md  MULTI-ZIP-GUIDE.md  R2_PERFORMANCE.md  README.md  RECREATE_R2_BUCKET.md  SETUP.md  TRACING_GUIDE.md  deploy-all.sh  pyproject.toml  run_server.py  run_test.py  secrets.py.example  setup-local-config.sh  test_local_generation.py  wrangler.dispatcher.toml  wrangler.fetcher.toml  wrangler.generator.toml  wrangler.scheduler.toml  wrangler.toml
src/: README.md  __init__.py  asset_loader.py  cf-requirements.txt  configs.py  index.py  weather_landscape.py
src/assets/: styles.css
src/p_weather/: configuration.py  draw_weather.py  openweathermap.py  sprites.py  sprites_rgb.py  sunrise.py
src/shared/: config.py  image_utils.py  kv_utils.py
src/templates/: admin.html  forecasts.html  guide.html  index.html  landing.html
src/workers/: __init__.py  job_dispatcher.py  landscape_generator.py  scheduler_utils.py  weather_fetcher.py  web.py  zip_scheduler.py
src/workers/assets/: styles.css
src/workers/shared/: __init__.py  config.py  configs.py  debug_tracing.py  image_utils.py  kv_utils.py  r2_utils.py  tracing.py  weather_landscape.py
src/workers/shared/p_weather/: configuration.py  draw_weather.py  openweathermap.py  sprites_rgb.py  weather_data.py
src/workers/templates/: admin.html  forecasts.html  landing.html
templates/: dev_index.html
workers/dispatcher/: README.md  pyproject.toml  wrangler.toml
workers/dispatcher/src/: dispatcher.py  dispatcher_utils.py
workers/fetcher/: .gitattributes  .gitignore  .wranglerignore  README.md  deploy.sh  kv_utils.py  purge-venv.sh  pyproject.toml  weather_fetcher.py  wrangler.toml
workers/fetcher/src/: config.py
workers/landscape/: README.md  configs.py  landscape_utils.py  pyproject.toml  weather_landscape.py  wrangler.toml
workers/landscape/src/: configs.py  landscape_generator.py  landscape_utils.py  weather_landscape.py
workers/landscape/src/p_weather/: configuration.py  draw_weather.py  openweathermap.py  sprites.py
workers/scheduler/: README.md  pyproject.toml  wrangler.toml
workers/web/: README.md  pyproject.toml  wrangler.toml
workers/web/src/: web.py  web_utils.py
workers/web/src/assets/: robots.txt  security.txt
workers/web/src/assets/templates/: admin.html
