[project]
name = "weather-landscape-dispatcher"
version = "0.1.0"
description = "Job dispatcher worker for Weather Landscape - minimal dependencies"
requires-python = ">=3.12"
# NO dependencies needed - dispatcher only reads KV and enqueues jobs
dependencies = []

[dependency-groups]
dev = [
    "workers-py>=1.7.0",  # Required for Cloudflare Workers runtime
]
